syntax = "proto3";
package record;
option go_package = "./";

service Record{
  rpc RecordServer(RecordRequest) returns(RecordReply){}//记录请求
  rpc GetOtherRecord(OtherRecordRequest)returns(OtherRecordReply){}//获得其他记录信息
  rpc GetIterationRecord(IterationRecordRequest)returns(IterationRecordReply){}//获得其他记录信息
}

//-----------------------记录请求 start------------------
message RecordRequest{
  string server_name = 1;
  string ip = 2;
  string ip_addr = 3;
  string result = 4;
}
message RecordReply{
  string name = 1;
  string message = 2;
}
//-----------------------记录请求 end------------------

//-----------------------获得其他记录信息 start------------------
message OtherRecordRequest{
  string name = 1;
  string message = 2;
  string param = 3;
}
message OutRecord{
  string id = 1;
  string content = 2;
  string use = 3;
}
message OtherRecordReply{
  string name = 1;
  string message = 2;
  repeated OutRecord data = 3;
}
//-----------------------获得其他记录信息 end------------------

//-----------------------获得版本记录信息 start------------------
message IterationRecordRequest{
  string name = 1;
  string message = 2;
  string param = 3;
}
message OutIterationRecord{
  string id = 1;
  string v_edition = 2;
  string v_date = 3;
  string v_content = 4;
  string v_type = 5;
  string v_name = 6;
  string v_is_use = 7;
}
message IterationRecordReply{
  string name = 1;
  string message = 2;
  repeated OutIterationRecord data = 3;
}
//-----------------------获得版本记录信息 end------------------